--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,8 +33,8 @@
     "react-hook-form": "^7.62.0",
     "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
-    "react-query": "^3.39.3",
     "react-textarea-autosize": "^8.5.9",
+    "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
