--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/leaflet": "^1.9.20",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
